part1/11.persistentVol_pingPong-logOutput/service.yml
apiVersion: v1
kind: Service
metadata:
  name: persistent-vol-service
spec:
  type: ClusterIP
  selector:
    app: persistent-vol
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8080  # ping-ong
      name: ping-pong
    - port: 2348
      protocol: TCP
      targetPort: 8090  # log-output
      name: log-output
